<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_container_padding"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:gravity="center"
                android:text="@string/registration_activity_header"
                android:textColor="@color/red"
                android:textSize="@dimen/header_text_size" />

            <EditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:hint="@string/registration_activity_login_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/simple_button_text_size" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:hint="@string/registration_activity_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/simple_button_text_size" />

            <EditText
                android:id="@+id/password_repeat_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:hint="@string/registration_activity_password_repeat_hint"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/simple_button_text_size" />

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:hint="@string/registration_activity_user_first_name"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/simple_button_text_size" />

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:hint="@string/registration_activity_user_last_name"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/simple_button_text_size" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/man_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_activity_radio_man"
                    android:textSize="@dimen/simple_button_text_size" />

                <RadioButton
                    android:id="@+id/woman_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_activity_radio_woman"
                    android:textSize="@dimen/simple_button_text_size" />

                <RadioButton
                    android:id="@+id/not_defined_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/registration_activity_radio_it"
                    android:textSize="@dimen/simple_button_text_size" />
            </RadioGroup>

            <EditText
                android:id="@+id/additional_information_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:background="@drawable/edit_text_background"
                android:gravity="top|start"
                android:hint="@string/registration_activity_additional_information"
                android:inputType="textMultiLine"
                android:minHeight="180dp"
                android:padding="@dimen/edit_text_padding"
                android:singleLine="false"
                android:textSize="@dimen/edit_text_size" />

            <CheckBox
                android:id="@+id/agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:checked="false"
                android:text="@string/registration_activity_checkbox_accept_agreement" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verification_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:background="@drawable/button_background"
                android:enabled="false"
                android:text="@string/training_activity_registration_button"
                android:textAllCaps="false"
                android:textSize="@dimen/simple_button_text_size" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:textSize="@dimen/simple_button_text_size"
            android:textAllCaps="false"
            android:text="@string/login_activity_back_button"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</ScrollView>