<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_container_padding"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:text="@string/training_activity_header"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text_size"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:textSize="@dimen/simple_button_text_size"
                android:textAllCaps="false"
                android:text="@string/training_activity_login_button"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_view_margin_bottom"
                android:textColor="@color/black"
                android:textSize="@dimen/simple_button_text_size"
                android:textAllCaps="false"
                android:text="@string/training_activity_registration_button"
                android:background="@drawable/button_background"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/about_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:textSize="@dimen/simple_button_text_size"
            android:textAllCaps="false"
            android:text="@string/training_activity_aboutApp_button"
            android:background="@drawable/button_background"/>

    </LinearLayout>
</ScrollView>
